--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "dotenv": "^16.4.1",
+    "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -24,6 +28,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "husky": "^9.0.10",
