--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-app-template",
+  "name": "next-app-template2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,40 +7,48 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
-  },
-  "husky": {
-    "hooks": {}
+    "db": "prisma studio"
   },
   "dependencies": {
-    "@auth/core": "^0.26.2",
-    "@auth/drizzle-adapter": "^0.6.2",
-    "@iconify/react": "^4.1.1",
+    "@alicloud/dysmsapi20170525": "^2.0.24",
+    "@alicloud/openapi-client": "^0.4.8",
+    "@alicloud/tea-util": "^1.4.7",
+    "@auth/prisma-adapter": "^1.4.0",
+    "@ducanh2912/next-pwa": "^10.2.5",
+    "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@nextui-org/react": "^2.2.9",
-    "adapters": "link:@auth/core/adapters",
+    "@prisma/client": "5.10.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.14",
+    "ai": "^2.2.35",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
-    "dotenv": "^16.4.1",
-    "drizzle-orm": "^0.29.3",
-    "framer-motion": "^11.0.3",
+    "formik": "^2.4.5",
+    "framer-motion": "^11.0.5",
+    "gpt-tokenizer": "^2.1.2",
     "next": "14.1.0",
-    "next-auth": "5.0.0-beta.8",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3",
+    "next-auth": "5.0.0-beta.11",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.9",
+    "openai": "^4.28.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.1"
+    "redis": "^4.6.13",
+    "tailwind-merge": "^2.2.1",
+    "usehooks-ts": "^2.14.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.17",
-    "drizzle-kit": "^0.20.14",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "husky": "^9.0.10",
-    "postcss": "^8.4.34",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8",
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
